--- a/style.css
+++ b/style.css
@@ -68,8 +68,10 @@ height: 150%;
 .hornav {
     width: 100%;
     position: fixed;
+    background: rgba(0,0,0,0.4);
     z-index: 2;
     display: block;
+
 }
 
 .bar {
@@ -104,13 +106,13 @@ height: 150%;
 }
 
 .head {
-    font-size: 64px;
+    font-size: 6rem;
     line-break:auto;
 }
 
 .p1 {
-    margin-top: 1rem;
-    font-size: 16px;
+    margin-top: 2rem;
+    font-size:24px;
 }
 
 .con > head, p1 {
@@ -222,9 +224,9 @@ background-color: #616161;
 }
 
 .conts {
-    margin: 16px 0 ;
-    width: 100%;
-    padding: 0 8px;
+   margin: 16px 0;
+   width: 100%;
+   padding: 0 -16px;
 }
 
 .conts1, .conts2 {
