--- a/style.css
+++ b/style.css
@@ -473,6 +473,10 @@ footer {
     header>h1>.im {
         display: none;
     }
+    .p1 {
+        margin-top: 2rem;
+        font-size:16px;
+    }
 }
 
 @media screen and (min-width: 601px) {
