--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ height: 150%;
 }
 
 .head {
-    font-size: 6rem;
+    font-size: 4rem;
     line-break:auto;
 }
 
@@ -475,7 +475,7 @@ footer {
     }
     .p1 {
         margin-top: 2rem;
-        font-size:16px;
+        font-size:14px;
     }
 }
 
@@ -531,6 +531,9 @@ footer {
     }
     header>h1>.im {
         display: visible;
+    }
+    .head {
+        font-size: 6rem;
     }
 }
 
